# Parking-application

./: CMakeLists.txt  ParkingLot.hpp  Permit.hpp  README.md  Utilities.hpp  launch.json  main.cpp  parking_data.txt  settings.json  tasks.json
